--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goit-react-hw-07-phonebook",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Aleks24dan.github.io/goit-react-hw-06-phonebook",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -12,6 +13,7 @@
     "axios": "^0.22.0",
     "netlify": "^8.0.1",
     "netlify-cli": "^6.10.2",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -21,7 +23,6 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "web-vitals": "^1.1.2"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,9 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "netlify deploy -p"
-    
-     
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
